5.0a1 -> 5.0a2:
    - rse: fix type mismatches between function prototype and function definitions related to uint64_t
    - rse: replace still existing u_int32_t with uint32_t to get building under Solaris
    - rse: remove warnings in rpmdb/dbconfig.c when building an SQLite-only RPM
    - rse: fix building against external Berkeley-DB under Solaris (where -lrt is required)
    - rse: fix distribution tarball by adding the missing misc/librpmmisc.vers
    - jbj: hmmm, tagno's 261 and 269 are fishy, skip tagTypeValidate for now.
    - jbj: add tagTypeValidate sanity check before flipping to implicit typing.
    - jbj: fix: "RPMTAG_FILESTATES has RPM_CHAR_TYPE=1 instead of 2".
    - jbj: eliminate headerGetLangs, query RPMTAG_HEADERI18NTABLE instead.
    - jbj: eliminate headerGetRawEntry(), noone can possibly need.
    - jbj: eliminate headerDump, query with --xml or --yaml instead.
    - jbj: hmmm RPMTAG_FILESTATES has RPM_CHAR_TYPE=1 instead of 2. todo++;
    - jbj: eliminate RPM_CHAR_TYPE, use RPM_UINT8_TYPE instead.
    - jbj: eliminate RPM_NULL_TYPE, use 0 instead.

4.5 -> 5.0a1:
    - rse: start providing a high-level NEWS document for RPM 5
    - rse: first cut for properly integrate XAR support into the build environment
    - rse: allow RPM to be built without XAR support again
    - jbj: functional header-only signature verify of *.xar.
    - jbj: add --rpmwfdebug.
    - jbj: clean up rpmpkg memory leaks.
    - jbj: functional queries of *.xar packages, on to payload.
    - jbj: lash up rpmwf implicit iteration for Lead/Signature/Header reads.
    - jbj: add rpmwf getter/setter to FD_t for now.
    - jbj: add --xar to read *.xar for now, magic later.
    - jbj: txar.c: use rpmwfFoo from -lrpmdb.
    - jbj: hotwire -lxar linkage for the moment.
    - jbj: add proof-of-concept rpmwf "wrapper format" to rpmdb.
    - jbj: move rpmReadHeader from lib/package.c to rpmdb/pkgio.c.
    - jbj: remove HGE_t casts everywhere.