@@ -475,7 +475,7 @@ AC_CHECK_HEADERS([dnl
     machine/types.h mntent.h sys/mnttab.h sys/systemcfg.h dnl
     sys/param.h sys/mount.h sys/mntctl.h sys/vmount.h dnl
     libio.h err.h mcheck.h limits.h libgen.h float.h dnl
-    glob.h poll.h netinet/in.h arpa/inet.h dnl
+    glob.h poll.h netinet/in.h arpa/inet.h inttypes.h dnl
 ])
 
 dnl # GNU gettext support
