@@ -10,6 +10,9 @@
 #endif
 
 #include <sys/types.h>
+#if defined(HAVE_INTTYPES_H)
+#include <inttypes.h>
+#endif
 
 #if defined(__LCLINT__)
 /*@-redef@*/
